issue #13 - support icq 2000b
